docs(skills): implement CU2-s4 — de-stub java/csharp + 9-file completeness (CU2 complete) (v6.10.3)
java 53→199, csharp 53→173 lines. CWE-502 deserialization, virtual threads (JEP 444/491/506),
JPMS; ConfigureAwait/async-void/nullable + BinaryFormatter removal (.NET 9+). Every version/CWE
web-verified (openjdk.org/jeps, learn.microsoft.com, endoflife.date, MITRE v4.20, retrieved
2026-07-09); corrected stale C#-field/.NET-LTS claims. 9-FILE COMPLETENESS CHECK PASSES (all 9
guides 166-241 lines, substantive). Zero fabrication; additive. 64 tests; suite 3535/0/0.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>